--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="skill-row">
             <img class="tiramisu" src="images\tiramisu.png" alt="" style="height: 150px;">
             <h3>Eating Tiramisu</h3>
-            <p>I've always loved Tiramisu and recently got event better knowledge about this art thanks to my trip to Italy. I also grade them so that one day I can find the best. </p>
+            <p>I've always loved Tiramisu and recently got even better knowledge about this art thanks to my trip to Italy. I also grade them so that one day I can find the best. </p>
           </div>
           <div class="skill-row">
             <img class="beer" src="images\beer.png" alt="" style="height: 150px;">
