--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>If you love tiramisu as much as I do.</h3>
-          <p>If you want to know where the best tiramisu in town is, or to recommand me one, please send me an email !.</p>
+          <p>If you want to know where the best tiramisu in town is, or to recommend me one, please send me an email !.</p>
           <a class="BUTTON_DGF" href="mailto:mart.paulantoine@gmail.com">CONTACT ME</a>
         </div>
       </div>
